# RAG_against_the_machine

./: .gitignore  Makefile  README.md  pyproject.toml
src/: __main__.py
src/cli_functions/: index.py
src/cli_functions/index/: chunk.py  index.py
src/init_models/: init_questions.py
src/models/: answeredQuestion.py  minimal.py  minimalAnswer.py  minimalSearchResults.py  questions.py  ragDataset.py  student.py  studentSearchResults.py  studentSearchResultsAndAnswer.py
src/utils/: error.py
student/: __main__.py
student/cli_functions/answer/: answer.py
student/cli_functions/index/: chunk.py  index.py
student/cli_functions/search/: search.py
student/init_models/: init_questions.py
student/models/: answeredQuestion.py  minimalSearchResults.py  minimalSource.py  ragDataset.py  studentSearchResults.py  studentSearchResultsAndAnswer.py  unansweredQuestion.py
